# projeto-engenharia-de-software

./: .gitignore  Procfile  README.md  README1.md  ReadMe.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
contrib/: env-sample
front/: .env.development  .env.production  package-lock.json  package.json
front/public/: index.html
front/src/: api.js  index.js  routes.js
front/src/components/: EditEntrada.js  EditForm.js  EditSaida.js  EntradaTable.js  EntradasForm.js  EstoqueAtualTable.js  Footer.js  ModalEntradas.js  ModalGeneric.js  Navbar.js  SaidaTable.js  SaidasForm.js  Sidebar.js  Tables.js  User.js  UsuarioForm.js  UsuarioTable.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
ivh_inventario/: asgi.py  openapi_config.py  settings.py  urls.py  wsgi.py
ivh_inventario/core/: apps.py  urls.py  views.py
ivh_inventario/doador/: admin.py  apps.py  models.py
ivh_inventario/entrada/: admin.py  apps.py  models.py  tests.py
ivh_inventario/estoque/: admin.py  apps.py  models.py  tests.py
ivh_inventario/item/: admin.py  apps.py  models.py  tests.py
ivh_inventario/saida/: admin.py  apps.py  models.py  tests.py
ivh_inventario/usuario/: admin.py  apps.py  models.py  tests.py
ivh_inventário/: asgi.py  openapi_config.py  settings.py  urls.py  wsgi.py
ivh_inventário/core/: apps.py
ivh_inventário/estoque/: apps.py
ivh_inventário/item/: admin.py  apps.py  models.py
ivh_inventário/saida/: apps.py
ivh_inventário/usuario/: admin.py  apps.py  models.py
vercel_app/: wsgi.py
(+95 files in other folders)
