[tool.poetry]
name = "IVH Inventário"
version = "0.1.0"
description = "Sistema de gestão de estoque do Instituto Vitória Humana"
authors = ["Ismael Barros <barros.ismael@outlook.com>", "Tiago Bello <tiagohbello@gmail.com>"]
license = "CC BY-NC-ND"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
python-decouple = "^3.4"
djangorestframework = "^3.14.0"
django-rest-auth = "^0.9.5"
uuid = "^1.30"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
drf-yasg = "^1.21.4"



[tool.poetry.dev-dependencies]
pytest-django = "^4.2.0"
flake8 = "^3.9.1"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ivh_inventário.settings"
python_files = [
    "test*.py",
     "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "ivh_inventário/core/",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
